fixed ordering of home img on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -847,7 +847,7 @@ img {
      }
      
      .home__img {
-         order: 1;
+         order: 0;
          justify-self: center;
      }
 
